Add security event logging feature